<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ranger_msgs</name>
  <version>0.0.0</version>
  <description>Custom messages for ROS 2</description>

  <maintainer email="your-email@domain.com">Your Name</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group >rosidl_interface_packages</member_of_group>
  <depend>builtin_interfaces</depend>
  
  <depend>rclcpp</depend>
  <export>
    <build_type>ament_cmake</build_type>
    <depend>std_msgs</depend>

  </export>

</package>